--- a/week3_fight/views/includes/profile.ejs
+++ b/week3_fight/views/includes/profile.ejs
@@ -15,7 +15,7 @@
 </script>
 <div class="col-2">
   <div class="card">
-    <%= if(user.thumbnail){ %>
+    <%= if(!user.thumbnail){ %>
     <img
       src="https://user-images.githubusercontent.com/42710591/89651430-e3997800-d8fe-11ea-8fc4-892c6fc429ab.JPG"
       class="card-img-top"
